			ROX-Session
			A very simple session manager
			by Thomas Leonard

TODO: Get sawfish's iconize animation to go into the middle of the screen
      so people stop blaming us for hiding the icons under the panel...

08-Apr-2002
~~~~~~~~~~~
Added support for translations.
Added Danish translation (Christian Storgaard).

25-Mar-2002
~~~~~~~~~~~
Added missing linker flags (reported by Stephen Watson).

06-Mar-2002 (Release 0.1.14)
~~~~~~~~~~~
Added XSetting for default Gtk+ font.

05-Mar-2002
~~~~~~~~~~~
Added settings for cursor blinking.

03-Mar-2002
~~~~~~~~~~~
Put choice of window manager in the options box, instead of having its own
system. The 'DefaultWM' file is no longer used.

01-Mar-2002
~~~~~~~~~~~
Changed over to Gtk+-2.0.

20-Feb-2002
~~~~~~~~~~~
Added instructions on using ROX-Session with gdm.
XSETTINGS now supports the Gtk/CanChangeAccels setting (requires Gtk patch).

03-Feb-2002
~~~~~~~~~~~
Started adding support for XSETTINGS protocol.

29-Jan-2002 (Release 0.1.13)
~~~~~~~~~~~
Removed session support, after realising that, despite its insane levels of
complexity, it doesn't actually support what I want (confirmation of logout)!
Updated configure.in for new autoconf (Richard Boulton).
Put in lots of quotes to cope with spaces in filenames.
Default .xsession no longer sets LD_LIBRARY_PATH, but does provide an easier
way to turn on anti-aliased fonts.

18-Oct-2001
~~~~~~~~~~~
Started adding session management support.

04-Oct-2001
~~~~~~~~~~~
Added IceWM to the default list of window managers (Bernard Jungen).

28-Jul-2001
~~~~~~~~~~~
Added WindowMaker to the default list of window managers (Terol Jose).

16-May-2001
~~~~~~~~~~~
Moved to new AppInfo.xml system.

23-Mar-2001 (Release 0.1.12)
~~~~~~~~~~~
When the window manager quits, the choice box defaults to the last used
command (so it's easy to restart the same program).

18-Mar-2001
~~~~~~~~~~~
When first loaded, ROX-Session will ask you which window manager you want