@@ -12,7 +12,7 @@
   </section>
 
   <section title='Window manager'>
-    <label>The window manager is a program which puts title bars and frames on windows. It allows you to move windows around, resize them, close them and so on.</label>
+    <label help='1'>The window manager is a program which puts title bars and frames on windows. It allows you to move windows around, resize them, close them and so on.</label>
     <wm-combo name='DefaultWM' label='Default window manager'/>
     <spacer/>
     <start-wm/>
@@ -32,6 +32,12 @@
     <frame label='Keyboard'>
       <toggle name='Gtk/CanChangeAccels'
     	    label='Allow keybindings to be changed from menus'>When this is on, you can set up a short-cut for a menu item by holding to pointer over the menu item and pressing the key. If off, short-cuts cannot be changed.</toggle>
+    </frame>
+  </section>
+  <section title='Messages'>
+    <label help='1'>All programs have a 'standard error' stream which they can write text messages to. ROX-Session creates such a connection between itself and every program it starts. It displays all the messages it collects this way briefly on screen.</label>
+    <frame label='On-screen message log'>
+      <numentry label='Show messages for:' unit='seconds' min='1' max='30' name='log_time_shown'>Number of seconds to display each message for</numentry>
     </frame>
   </section>
 </options>
