@@ -8,6 +8,8 @@ sawmill
 enlightenment
 wmaker
 icewm
+blackbox
+fluxbox
 kwm
 fvwm2
 fvwm
