@@ -31,6 +31,8 @@
 #include <sys/types.h>
 #include <unistd.h>
 
+#include "global.h"
+
 #include "choices.h"
 
 static gboolean saving_disabled = TRUE;
