@@ -5,6 +5,12 @@
 TODO: Get sawfish's iconize animation to go into the middle of the screen
       so people stop blaming us for hiding the icons under the panel...
 
+23-Apr-2002
+~~~~~~~~~~~
+Add BlackBox and FluxBox to the window manager list, and added option to
+set how long log messages are displayed for (Michel Alexandre Salim).
+Upgraded to new options code.
+
 08-Apr-2002
 ~~~~~~~~~~~
 Added support for translations.
